--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ node_modules/
 # Build output directories
 docs/.vitepress/dist/
 docs/.vitepress/cache/
+.vitepress/dist/
+.vitepress/cache/
 .vite/
 dist/
 
